Fixed css layout bugs in MovieFilter Component on MovieFilter, MovieSearch, MovieDatail

--- a/src/ReactLifeCycle/i-Design/MovieDetail/css/MovieDetail.css
+++ b/src/ReactLifeCycle/i-Design/MovieDetail/css/MovieDetail.css
@@ -3,6 +3,7 @@
   height: 83vh;
   background-color: rgb(247, 241, 241);
   position: relative;
+  z-index: 999;
 }
 
 .movieBgDark {
