--- a/src/ReactLifeCycle/i-Design/MovieDetail/css/MovieDetailFilter.css
+++ b/src/ReactLifeCycle/i-Design/MovieDetail/css/MovieDetailFilter.css
@@ -13,6 +13,9 @@
   width: 100vw;
   background-color: lightgray;
   padding: 0 2.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .MovieFilter-Category-List {
@@ -40,13 +43,13 @@
   height: 83vh;
   padding: 1rem 0;
   border: 2px solid;
+  z-index: 1;
 }
 
 .MovieFilter-Result-Container {
   width: 100vw;
   position: absolute;
   right: 0;
-  /* background-color: red; */
 }
 
 .MovieFilter-Filter-List {
@@ -66,6 +69,7 @@
 
 .MovieFilter-Filter-LabelDiv {
   padding-top: 1rem;
+  width: 10vw;
 }
 
 .MovieFilter-Filter-Label {
