--- a/src/ReactLifeCycle/i-Design/MovieSearch/css/MovieFilter.css
+++ b/src/ReactLifeCycle/i-Design/MovieSearch/css/MovieFilter.css
@@ -9,15 +9,18 @@
   flex-direction: column;
 }
 
-.MovieFilter-Options {
+.MovieSearch-MovieFilter-Options {
   width: 100vw;
   background-color: lightgray;
   padding: 0 2.5rem;
   position: sticky;
   top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.MovieFilter-List {
+.MovieSearch-MovieFilter-List {
   height: 7vh;
   display: flex;
   align-items: center;
@@ -25,36 +28,36 @@
   list-style: none;
 }
 
-.MovieFilter-List>li {
+.MovieSearch-MovieFilter-List>li {
   cursor: pointer;
 }
 
-.MovieFilter-List>li:hover {
+.MovieSearch-MovieFilter-List>li:hover {
   color: rgb(132, 130, 130);
 }
 
-.MovieFilter-Filters {
+.MovieSearch-MovieFilter-Filters {
   display: flex;
 }
 
-.MovieFilter-Filter-Container {
+.MovieSearch-MovieFilter-Filter-Container {
   width: 20vw;
-  height: 83vh;
-  padding: 1rem 0;
+  height: max-content;
+  padding: 3rem 0;
   border: 2px solid;
   position: sticky;
   top: 3rem;
 }
 
-.MovieFilter-Result-Container {
+.MovieSearch-MovieFilter-Result-Container {
   width: 80vw;
 }
 
-.MovieFilter-Filter-List {
+.MovieSearch-MovieFilter-Filter-List {
   padding-top: 1rem;
 }
 
-.MovieFilter-Filter-Name {
+.MovieSearch-MovieFilter-Filter-Name {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -65,11 +68,12 @@
   padding-top: 3px;
 }
 
-.MovieFilter-Filter-LabelDiv {
+.MovieSearch-MovieFilter-Filter-LabelDiv {
   padding-top: 1rem;
+  width: 10vw;
 }
 
-.MovieFilter-Filter-Label {
+.MovieSearch-MovieFilter-Filter-Label {
   display: flex;
   padding-left: 7rem;
   gap: 10px;
